--- a/package.json
+++ b/package.json
@@ -1,13 +1,21 @@
 {
+  "$schema": "https://json.schemastore.org/package.json",
   "name": "math-interpreter",
   "version": "1.0.0",
   "description": "math interpreter",
-  "main": "index.js",
+  "main": "build/index.js",
   "repository": "https://github.com/jsusm/math-interpreter",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "",
-  "license": "ISC"
+  "author": "Jesus Marcano",
+  "license": "ISC",
+  "devDependencies": {
+    "@types/jest": "^29.5.0",
+    "@types/node": "^18.15.10",
+    "jest": "^29.5.0",
+    "ts-jest": "^29.0.5",
+    "typescript": "^5.0.2"
+  }
 }
